# YandeBackendTask

./: .gitignore  README.md  docker-compose.yaml
core/: .env  Dockerfile  README.md  expected.json  main.py  pyproject.toml  requirements.txt  response.json  settings.json
core/core/: __init__.py  main.py
core/core/api/: __init__.py  models.py  router.py  services.py
core/core/api/advanced/: __init__.py  router.py  services.py
core/core/api/base/: __init__.py  models.py  router.py  services.py
core/core/src/: __init__.py  application.py  metadata.py
core/core/util/: __init__.py  advlogger.py  db_dao.py  error_codes.py  exceptions.py  metadata.py  remove_422.py  schemas.py  settings.py
core/tests/: expected.json  response.json  unit_test.py
database/: Dockerfile  README.md
database/db/: README.md  app.lua  errors.lua  util.lua
database/db/api_read/: init.lua  nodes.lua  sales.lua  statistic.lua
database/db/api_write/: delete.lua  imports.lua  init.lua
