[tool.poetry]
name = "core"
version = "0.1.0"
description = "Тестовое задание для прохождения в школу Яндекса"
authors = ["Evgeny Dmitriev <zenka712@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "0.74.0"
uvicorn = { version = "0.13.3", extras = ["standard"] }
loguru = "0.5.3"
environs = "9.3.0"
asynctnt = "1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
start = "core:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
